--- a/Dockerfile.f37
+++ b/Dockerfile.f37
@@ -45,13 +45,15 @@ RUN \
    dnf install -y epel-release; \
    dnf install -y rpm-build rpmlint python3-pip rubygem-ronn \
                   dnf-plugins-core 'dnf-command(config-manager)' \
-                 'dnf-command(builddep)' sudo rsync rpmdevtools;
+                 'dnf-command(builddep)' sudo rsync rpmdevtools; \
+   dnf clean all;
 
 COPY packaging/redhat/python-apprise.spec /
 # Place our build file into the path
 COPY bin/build-rpm.sh /usr/bin
 RUN rpmspec -q --buildrequires /python-apprise.spec | cut -f1 -d' ' | \
-    xargs dnf install -y
+    xargs dnf install -y; \
+    dnf clean all;
 
 # RPM Build Structure Setup
 ENV FLAVOR=rpmbuild OS=centos DIST=el8
