--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,6 +63,8 @@ jobs:
             python-version: "3.10"
           - os: "ubuntu-latest"
             python-version: "3.11"
+          - os: "ubuntu-latest"
+            python-version: "3.12"
 
     defaults:
       run:
@@ -117,6 +119,7 @@ jobs:
     # and run project-specific tasks.
     - name: Setup project
       run: |
+        python -m pip install --upgrade pip setuptools wheel
         pip install --editable=.
         python setup.py compile_catalog
 
