--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license_files = LICENSE
 
 [flake8]
 # We exclude packages we don't maintain
-exclude = .eggs,.tox,.local,dist
+exclude = .eggs,.tox,.local,dist,.venv,venv
 ignore = E741,E722,W503,W504,W605
 statistics = true
 builtins = _
